--- a/finalproject/styles/products.css
+++ b/finalproject/styles/products.css
@@ -51,8 +51,6 @@ h2 {
     width: 95%;
     white-space: nowrap;
     overflow-x: hidden;
-    /* display: inline-block;
-    padding-left: 100%; */
 }
 
 @keyframes scroll-left {
@@ -61,7 +59,7 @@ h2 {
     }
 
     to {
-        transform: translateX(-100%);
+        transform: translateX(-1000%);
     }
 }
 
@@ -142,7 +140,7 @@ h2 {
     text-overflow: ellipsis;
 }
 
-/* ----------------------------- Filter ----------------------------- */
+/* ----------------------------- Filter Panel ----------------------------- */
 
 #filter-products {
     display: none;
@@ -218,7 +216,11 @@ dialog::backdrop {
 @media only screen and (min-width: 801px) {
     #ev-products {
         display: grid;
-        grid-template-columns: 200px 1fr;
+        grid-template-columns: auto 1fr;
+    }
+
+    #ev-products>div {
+        grid-column: 2/3;
     }
 
     #filter-icon {
